--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bootstrap": "5.2.0-beta1",
     "next": "12.1.6",
     "react": "18.2.0",
