--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.7.0",
-    "bootstrap": "5.2.0-beta1",
+    "bootstrap": "5.2.3",
     "next": "12.1.6",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.52.3"
