--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "5.2.3",
+    "bootstrap-icons": "^1.11.3",
     "next": "12.1.6",
     "nodemailer": "^6.9.1",
     "react": "18.2.0",
